<resources>
    <string name="app_name">DS_9712</string>
    <string name="AuthNavHost">AuthNavHost</string>
    <string name="MainNavHost">MainNavHost</string>
    <string name="error_none">None</string>
    <string name="empty_placeholder">-</string>
    <string name="launcher_fragment_log_in_text_button">Log In</string>
    <string name="launcher_fragment_dont_have_an_account_text">You need an account, click \nhere to sign up.</string>
    <string name="log_in_fragment_title">Sign in to continue</string>
    <string name="log_in_fragment_sign_in_text_button">Log in</string>
    <string name="log_in_fragment_username_input_hint">Username</string>
    <string name="log_in_fragment_password_input_hint">Password</string>
    <string name="log_in_fragment_dont_have_an_account_text">You need an account, click \nhere to sign up.</string>
    <string name="log_in_fragment_error_empty_username_field">Username field can not be empty</string>
    <string name="log_in_fragment_error_empty_password_field">Password field can not be empty</string>
    <string name="sign_up_step_one_fragment_title">Sign Up</string>
    <string name="sign_up_step_one_fragment_description">Please enter your full name and username</string>
    <string name="sign_up_step_one_fragment_full_name_edit_text_hint">Full Name</string>
    <string name="sign_up_step_one_fragment_username_edit_text_hint">Username</string>
    <string name="sign_up_step_one_fragment_next_text_button">Next</string>
    <string name="sign_up_step_one_fragment_already_have_an_account_text">Already have an account?</string>
    <string name="sign_up_step_one_fragment_sign_in_text_button">Sign in here.</string>
    <string name="sign_up_step_one_fragment_error_empty_full_name_field">Full Name field can not be empty</string>
    <string name="sign_up_step_one_fragment_error_empty_username_field">Username field can not be empty</string>
    <string name="sign_up_step_two_fragment_title">Sign Up</string>
    <string name="sign_up_step_two_fragment_description">Please enter you email</string>
    <string name="sign_up_step_two_fragment_email_edit_text_hint">Email</string>
    <string name="sign_up_step_two_fragment_next_text_button">Next</string>
    <string name="sign_up_step_two_fragment_error_empty_email_field">Email field can not be empty</string>
    <string name="sign_up_step_three_fragment_title">Sign Up</string>
    <string name="sign_up_step_three_fragment_description">Please enter your password</string>
    <string name="sign_up_step_three_fragment_password_edit_text_hint">Password</string>
    <string name="sign_up_step_three_fragment_confirm_password_edit_text_hint">Confirm Password</string>
    <string name="sign_up_step_three_fragment_next_text_button">Next</string>
    <string name="sign_up_step_three_fragment_error_empty_password_field">Password field can not be empty</string>
    <string name="sign_up_step_three_fragment_error_passwords_do_not_match">Passwords do not match</string>
    <string name="sign_up_step_four_fragment_title">Sign Up</string>
    <string name="sign_up_step_four_fragment_description">Please enter your DOB. Note: only users who 18 years or older can create an account</string>
    <string name="sign_up_step_four_fragment_date_picker_title_text">Your Date of Birth</string>
    <string name="sign_up_step_four_fragment_next_text_button">Next</string>
    <string name="sign_up_step_five_fragment_title">PayPal</string>
    <string name="sign_up_step_five_fragment_description">In order for us to make a payouts to you we need to have your PayPal account on file. We are not using it anywhere else only to pay you a rewards</string>
    <string name="sign_up_step_five_fragment_email_edit_text_hint">PayPal Account</string>
    <string name="sign_up_step_five_fragment_next_text_button">Next</string>
    <string name="sign_up_step_five_fragment_error_empty_email_field">PayPal Username field can not be empty</string>
    <string name="forgot_password_fragment_title">Forgot Password</string>
    <string name="forgot_password_fragment_description">Enter your username associated with your account and we will email a link to reset your password</string>
    <string name="forgot_password_fragment_username_edit_text_hint">Username</string>
    <string name="forgot_password_fragment_submit_text_button">Submit</string>
    <string name="forgot_password_fragment_error_empty_username_field">Username field can not be empty</string>
    <string name="agreement_fragment_title">Agreement</string>
    <string name="agreement_fragment_description">Please read Terms of Use and Privacy Policy carefully. If you agree with it continue with registration otherwise click decline.</string>
    <string name="agreement_fragment_terms_of_use_text_button">Terms of Use</string>
    <string name="agreement_fragment_privacy_policy_text_button">Privacy Policy</string>
    <string name="agreement_fragment_accept_text_button">Accept</string>
    <string name="agreement_fragment_decline_text_button">Decline</string>
    <string name="terms_of_use_fragment_title">Terms of Use</string>
    <string name="terms_of_use_fragment_description">Last updated: April 2020</string>
    <string name="privacy_policy_fragment_title">Privacy Policy</string>
    <string name="privacy_policy_fragment_description">Last updated: November 2021</string>
    <string name="verify_email_fragment_title">Verify Email Address</string>
    <string name="verify_email_fragment_description">Verification code has been sent on your email. You should receive it within 5 &#8211; 10 minutes. Don’t forget to check spam.</string>
    <string name="verify_email_fragment_resend_text_button">Resend verification code</string>
    <string name="verify_email_fragment_change_email_text_button">Change email address</string>
    <string name="change_email_address_fragment_title">Email Address</string>
    <string name="change_email_address_fragment_description">Enter correct email address in the field below. We will send verification email on this address.</string>
    <string name="change_email_address_fragment_email_edit_text_hint">Email</string>
    <string name="change_email_address_fragment_password_edit_text_hint">Password</string>
    <string name="change_email_address_fragment_submit_text_button">Submit</string>
    <string name="change_email_address_fragment_error_empty_email_field">Email field can not be empty</string>
    <string name="change_email_address_fragment_error_empty_password_field">Password field can not be empty</string>
    <string name="intro_page_next_text_button">Next</string>
    <string name="intro_page_finish_text_button">Got it!</string>
    <string name="intro_page_slide_1_title">Hello!</string>
    <string name="intro_page_slide_1_description">Darkness is not the end&#8230;</string>
    <string name="intro_page_slide_2_description">And not the beginning&#8230;</string>
    <string name="intro_page_slide_3_description">It is something in between</string>
    <string name="intro_page_slide_4_description">We have something for you&#8230;</string>
    <string name="intro_page_slide_5_description">But you need to prove that you are the one who deserves our attention</string>
    <string name="intro_page_slide_6_description">Get to the end first and you will find us!</string>
    <string name="intro_page_slide_6_signature">Goodluck, \nDS_9712</string>
    <string name="main_key_placeholder">Key</string>
    <string name="main_submit_button_text">Submit</string>
    <string name="main_error_no_internet_connection">No internet\nconnection</string>
    <string name="main_error_unable_to_load_content">Unable to load\ncontent</string>
    <string name="main_error_retry_button_text">Retry</string>
    <string name="main_error_key_can_not_be_empty">Key can not be empty</string>
    <string name="main_error_invalid_key">You entered an invalid key</string>
    <string name="final_fragment_text_1">Congratulations my friend,</string>
    <string name="final_fragment_text_2">You were able to successfully solve everything we offered to you. It is time for you to meet us. Check your email, we will contact you shortly.</string>
    <string name="final_fragment_text_3">Goodluck,\nDS_9712</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="no_internet_connection_title">No network connection</string>
    <string name="no_internet_connection_description">No internet connection. Connect to the internet and try again.</string>
    <string name="no_internet_connection_refresh_button_text">Refresh</string>
    <string name="unable_to_complete_this_request">Unable to complete this request. \nPlease try again later&#8230;</string>
    <string name="full_name_is_required">Full Name is required.</string>
    <string name="full_name_field_is_too_short">Full Name field is too short.</string>
    <string name="full_name_field_is_too_long">Full Name field is too long.</string>
    <string name="username_is_required">Username is required.</string>
    <string name="this_username_already_in_use">This Username already in use.</string>
    <string name="username_field_is_too_short">Username field is too short.</string>
    <string name="username_field_is_too_long">Username field is too long.</string>
    <string name="username_is_available">Username is available.</string>
    <string name="email_is_required">Email is required.</string>
    <string name="this_email_already_in_use">This Email already in use.</string>
    <string name="invalid_email_format">Invalid Email format.</string>
    <string name="email_is_available">Email is available.</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="generic_success">Success</string>
    <string name="generic_error">Error</string>
    <string name="error_save_auth_token">Error saving authentication token.\nTry restarting the app.</string>
    <string name="error_save_account_properties">Error saving account properties.\nTry restarting the app.</string>
    <string name="response_check_previous_auth_user_done">Done checking for previously authenticated user.</string>
    <string name="password_field_required">Password field required.</string>
    <string name="password_is_too_short">Password is too short.</string>
    <string name="password_is_valid">Password is valid.</string>
    <string name="date_of_birth_field_required">Date Of Birth field required.</string>
    <string name="you_should_be_at_least_18_years_old">You should be at least 18 years old.</string>
    <string name="date_of_birth_is_valid">Date of birth is valid.</string>
    <string name="successfully_registered_new_user">Successfully registered new user.</string>
    <string name="successfully_retrieved_account_properties">Successfully retrieved account properties.</string>
    <string name="agreement_accepted_successfully_and_verification_code_sent">Agreement accepted successfully and verification code sent.</string>
    <string name="agreement_accepted_successfully_and_verification_code_not_sent">Agreement accepted successfully and verification code not sent.</string>
    <string name="successfully_retrieved_account_verification_fields">Successfully retrieved account verification fields.</string>
    <string name="account_deleted_successfully">Account deleted successfully.</string>
    <string name="error_deleting_account">Error deleting account.</string>
    <string name="verification_code_has_been_sent">Verification code has been sent.</string>
    <string name="unable_to_send_verification_email_due_to_reached_daily_limit">Unable to send verification email due to reached daily limit.</string>
</resources>