<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auth_screen_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:fontFamily="@font/vt323_regular"
            android:text="@string/final_fragment_text_1"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:fontFamily="@font/vt323_regular"
            android:layout_gravity="center_horizontal"
            android:text="@string/final_fragment_text_2"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:fontFamily="@font/vt323_regular"
            android:text="@string/final_fragment_text_3"/>

    </LinearLayout>

</RelativeLayout>