<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true">

    <!-- Background -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/auth_screen_background"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <!-- Main content -->

    <RelativeLayout
        android:id="@+id/agreement_page_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/agreement_page_toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/agreement_page_logout_button"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_logout_white"
                android:layout_marginStart="4dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                tools:ignore="ContentDescription" />

            <ProgressBar
                android:id="@+id/agreement_page_loading_progress_bar"
                android:layout_width="20dp"
                android:layout_height="50dp"
                android:layout_marginEnd="20dp"
                android:visibility="invisible"
                android:layout_alignParentEnd="true"
                android:indeterminateDrawable="@drawable/progress_bar"/>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/agreement_page_toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agreement_fragment_title"
                    android:textSize="40sp"
                    android:fontFamily="@font/vt323_regular"
                    android:textColor="@color/white"
                    android:layout_marginTop="40dp"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:text="@string/agreement_fragment_description"
                    android:textSize="18sp"
                    android:fontFamily="@font/vt323_regular"
                    android:textColor="@color/white"
                    android:layout_marginTop="26dp"
                    android:layout_marginBottom="50dp"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/agreement_privacy_policy_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:fontFamily="@font/vt323_regular"
                    android:textColor="@color/white"
                    android:text="@string/agreement_fragment_privacy_policy_text_button"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="45dp"/>

                <RelativeLayout
                    android:id="@+id/agreement_page_accept_button"
                    android:layout_width="280dp"
                    android:layout_height="50dp"
                    android:background="@drawable/auth_button_style"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/agreement_fragment_accept_text_button"
                        android:textSize="30sp"
                        android:textColor="@color/black"
                        android:layout_centerHorizontal="true"
                        android:textAlignment="center"
                        android:fontFamily="@font/vt323_regular"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/agreement_page_decline_button"
                    android:layout_width="280dp"
                    android:layout_height="50dp"
                    android:background="@drawable/auth_border_button_style"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="40dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/agreement_fragment_decline_text_button"
                        android:textSize="30sp"
                        android:textColor="@color/white"
                        android:layout_centerHorizontal="true"
                        android:textAlignment="center"
                        android:fontFamily="@font/vt323_regular"/>

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>